<resources>
    <string name="app_name">移动校园</string>
    <string name="splash_begin">开  始</string>
    <string name="login">登录</string>
    <string name="login_et_input_user_name">请输入用户名</string>
    <string name="login_et_input_user_password">请输入密码</string>
    <string name="home_page">首页</string>
    <string name="center_application">应用中心</string>
    <string name="str_conversation">消息</string>
    <string name="mine">我的</string>
    <string name="click_again_will_exit">再点击一次退出</string>
    <string name="request_permissions">权限请求</string>
    <string name="permissions_rationale">该APP需要相应的权限,请到设置页面去设置</string>
    <string name="request_permissions_phone_state">版本跟新需要获取手机状态的权限</string>
    <string name="mine_fragment_text_personal">个人档案</string>
    <string name="mine_fragment_text_collection">收藏</string>
    <string name="mine_fragment_text_set">设置</string>
    <string name="contacts">通讯录</string>
    <string name="calendar">日历</string>
    <string name="friends">好友</string>
    <string name="friends_list">好友列表</string>
    <string name="message">消息</string>
    <string name="scan_qr_code">扫描二维码</string>
    <string name="request_permission_by_scan_qr_code">扫描二维码需要CAMERA权限</string>
    <string name="select_from_album">从相册中选取</string>
    <string name="scan_qr_code_error">二维码解析失败</string>
    <string name="Ok">确定</string>
    <string name="cancel">取消</string>
    <string name="set">设置</string>
    <string name="check_version">版本检测</string>
    <string name="account_and_save">帐号与安全</string>
    <string name="common_set">通用设置</string>
    <string name="common_clear_cache">清除缓存</string>
    <string name="common_about_us">关于我们</string>
    <string name="common_exit_login">退出登录</string>
    <string name="suggestion">意见反馈</string>
    <string name="shareapp">分享APP</string>
    <string name="zf_mobile">正方移动校园</string>
    <string name="copy_right">Copyright 2011-2015 zfsoft CO.,LTD. All Rights Reserved\n\t© 2011-2015
        正方软件股份有限公司 版权所有
    </string>
    <string name="version">版本</string>
    <string name="url">网址</string>
    <string name="about_us">关于</string>
    <string name="update">立即跟新</string>
    <string name="update_later">下次再说</string>
    <string name="new_version">新版本</string>
    <string name="down_load_apk">正在下载新版本</string>
    <string name="scan_result">扫描结果</string>
    <string name="user_is_not_login">用户未登录</string>
    <string name="update_checking">跟新检查中…</string>
    <string name="is_last_version">已经是最新版本</string>
    <string name="feed_back">意见反馈</string>
    <string name="feed_back_submit">提  交</string>
    <string name="feed_back_hit">留下您的宝贵意见，我们将持续改进产品(最多不超过200个字)</string>
    <string name="receive_msg_hint">接收新消息提醒</string>
    <string name="light_mode">夜间模式</string>
    <string name="font_size">字体大小</string>
    <string name="app_theme">应用主题</string>
    <string name="cache_clearing">缓存清理中…</string>
    <string name="take_pictures">拍照</string>
    <string name="request_permission_by_camera">拍照需要CAMERA权限和写权限</string>
    <string name="request_permission_by_select_from_album">从相册中选取需要有读文件和写文件的权限</string>
    <string name="please_insert_sdcard">请确认已经插入SD卡</string>
    <string name="dir_create_failure">目录创建失败</string>
    <string name="icon_upload_failure">头像上传失败</string>
    <string name="please_login_again">请重新登录</string>
    <string name="no_data">暂无数据</string>
    <string name="agency_matters">待办事宜</string>
    <string name="has_been_done_affairs">已办事宜</string>
    <string name="finished_affairs">办结事宜</string>
    <string name="search">搜索</string>
    <string name="all_type">全部类型</string>
    <string name="agency_matters_detail">待办事宜详情</string>
    <string name="has_been_done_detail">已办事宜详情</string>
    <string name="settlement_detail">办结事宜详情</string>
    <string name="with_draw_matters">退回事宜</string>
    <string name="with_draw_content_hint">您的处理意见</string>
    <string name="submit">提交</string>
    <string name="process_tracking">流程跟踪</string>
    <string name="submit_matters">提交事宜</string>
    <string name="office_contacts">办公通讯录</string>
    <string name="phone_contacts">手机通讯录</string>
    <string name="yellow_contacts">黄页通讯录</string>
    <string name="often_contacts">常用联系人</string>
    <string name="attention_contacts">特别关注</string>
    <string name="organization">组织架构</string>
    <string name="no_name">无名</string>
    <string name="phone_contacts_request_permission">手机联系人需要获取相应的权限</string>
    <string name="phone_contacts_getting">正在获取手机联系人…</string>
    <string name="chat_contact_sync">正在同步联系人    </string>
    <string name="phone_contacts_get_failure">手机联系人获取失败</string>
    <string name="base_info">基本信息</string>
    <string name="name">姓名</string>
    <string name="phone">手机号</string>
    <string name="email">邮箱</string>
    <string name="save_to_phone">保存到手机</string>
    <string name="qr_code">生成二维码</string>
    <string name="call_need_permissions">打电话需要获取相应的权限</string>
    <string name="add_contracts_need_permissions">添加联系人需要相应的权限</string>
    <string name="add_contracts">正在添加联系人…</string>
    <string name="contract_add_success">联系人添加成功</string>
    <string name="contract_add_failure">联系人添加失败</string>
    <string name="str_add">添加</string>
    <string name="qr_code_card">二维码名片</string>
    <string name="department">部门</string>
    <string name="money">余额(元)</string>
    <string name="one_card">一卡通</string>
    <string name="card_recharge">卡片充值</string>
    <string name="consumer_details">消费明细</string>
    <string name="recharge_details">充值明细</string>
    <string name="card_reported_loss">卡片挂失</string>
    <string name="loading">正在加载数据…</string>
    <string name="balance">余额</string>
    <string name="no_location">未知地点</string>
    <string name="school_name">学校</string>
    <string name="card_number">卡号</string>
    <string name="recharge_number">充值金额</string>
    <string name="user_other_plat_pay">使用第三方平台支付</string>
    <string name="alipay">支付宝</string>
    <string name="recommend_alipay_to_use">推荐支付宝用户使用</string>
    <string name="pay">支付</string>
    <string name="please_input_recharge_amount">请输入充值金额</string>
    <string name="default_recharge_amount">0.0</string>
    <string name="dialog_recharge_money">￥</string>
    <string name="subscription_center">订阅中心</string>
    <string name="subscription_center_selected_header">已选应用(最多不超过7个)</string>
    <string name="edit">编辑</string>
    <string name="done">完成</string>
    <string name="more">更多</string>
    <string name="go_back">返回</string>
    <string name="most_to_select_seven">最多只能选择7个应用</string>
    <string name="is_save_edit">是否保存编辑?</string>
    <string name="please_select_app">请选择应用</string>
    <string name="pay_failure">支付失败</string>
    <string name="pay_success">支付成功</string>
    <string name="user_other_part_login">使用第三方登录</string>
    <string name="drag_to_sort">按住拖动调整排序</string>
    <string name="auth_loading">授权登录中…</string>
    <string name="qq_not_install">QQ未安装</string>
    <string name="weixin_not_install">微信未安装</string>
    <string name="sina_not_install">新浪未安装</string>
    <string name="not_install">未安装客户端</string>
    <string name="share">分享</string>
    <string name="sharing">分享中…</string>
    <string name="share_success">分享成功了</string>
    <string name="share_failure">分享失败了</string>
    <string name="share_cancel">分享取消了</string>
    <string name="share_and_auth_need_permissions">分享授权需要相应的权限</string>
    <string name="str_share_weixin">分享到微信</string>
    <string name="str_share_qq">分享到QQ</string>
    <string name="str_share_friendcircle">分享到朋友圈</string>
    <string name="str_share_qq_zone">分享到QQ空间</string>
    <string name="str_share_copynet">复制链接</string>
    <string name="nstr_scan_and_share_app">扫描上方二维码\n与朋友分享此APP客户端吧！</string>
    <string name="add_cloud_note_title">新建笔记</string>
    <string name="add_cloud_note_load_hint">正在加载中…</string>
    <string name="add_cloud_note_title_hint">请输入标题…</string>
    <string name="add_cloud_note_content_hint">请输入内容…</string>
    <string name="add_cloud_note_label_hint">未标签</string>
    <string name="not_know_activity">未知界面</string>
    <string name="label_title">标签</string>
    <string name="label_edit">编辑</string>
    <string name="cloud_note_title">云笔记</string>
    <string name="no_data_hint">暂无数据</string>
    <string name="add_by_account">通过帐号添加</string>
    <string name="str_search">查询</string>
    <string name="str_account">帐号</string>
    <string name="str_zx_add">扫码添加</string>
    <string name="sys_msg">联系人系统消息</string>
    <string name="str_clear">清空</string>
    <string name="_str_notify_enable">消息免打扰</string>
    <string name="str_off">OFF</string>
    <string name="str_on">ON</string>
    <string name="str_clear_chat_cache">清空聊天记录</string>
    <string name="str_make_top">置顶</string>
    <string name="search_tribe">添加群组</string>
    <string name="create_tribe">创建群组</string>
    <string name="my_tribe_card">我的群名片</string>
    <string name="tribe_per_set">个人设置</string>
    <string name="clear_tribe_cache">清空群聊天记录</string>
    <string name="quite_tribe">退出群聊</string>
    <string name="destroy_tribe">解散群聊</string>
    <string name="str_tribe_name">群名称</string>
    <string name="str_tribe_ic">群头像</string>
    <string name="str_tribe_zx">群二维码</string>
    <string name="str_forward">发送给朋友</string>
    <string name="str_msg_del">删除消息</string>
    <string name="str_copy">复制到剪贴板</string>
    <string name="str_contact_card">名片</string>
    <string name="str_one_of_members">群成员</string>
    <string name="please_input_label_name">输入标签名</string>
    <string name="today">今天</string>
    <string name="add_new">新建</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="add_schedule">新建日程</string>
    <string name="please_input_title">请输入标题</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="hint_time">提醒时间</string>
    <string name="repeat_time">重复次数</string>
    <string name="befor_ten_minute_hint">前10分钟提醒</string>
    <string name="just_repeat_once">仅提醒一次</string>
    <string name="dialog_hint_before_30">提前30分钟提醒</string>
    <string name="dialog_hint_before_10">提前10分钟提醒</string>
    <string name="dialog_hint_before_5">提前5分钟提醒</string>
    <string name="dialog_hint_before_0">准时提醒</string>
    <string name="dialog_hint_no">不提醒</string>
    <string name="dialog_repeat_times_1">仅提醒一次</string>
    <string name="dialog_repeat_times_5">每5分钟提醒一次</string>
    <string name="dialog_repeat_times_10">每10分钟提醒一次</string>
    <string name="dialog_repeat_times_15">每15分钟提醒一次</string>
    <string name="end_time_no_less_than_start_time">结束时间不能小于开始时间!</string>
    <string name="schedule_management_detail">日程详情</string>
    <string name="delete">刪除</string>
    <string name="lost_and_found_msg">请输入拾获物品的名称</string>
    <string name="location">拾获地点</string>
    <string name="lost_and_found_location">请输入拾获物品的地点</string>
    <string name="detail">详情描述</string>
    <string name="lost_and_found_detail">请详细描述拾获物品的特征</string>
    <string name="single_choice">单选题</string>
    <string name="muti_choice">多选题</string>
    <string name="short_answer">简答题</string>
    <string name="hit_the_title">打分题</string>
    <string name="suggestions_content_hint">请简要描述您使用app时遇到的问题和意见，若功能异常，上传页面截图更快解决哦！(最多不能超过300个字)</string>
    <string name="question_title">问题与意见（必填）</string>
    <string name="suggestions_add_image_title">添加图片（选填，提供问题截图）</string>
    <string name="contact_title">联系方式</string>
    <string name="suggestions_phone">联系电话</string>
    <string name="tel_hint">选填，便于我们与你联系</string>
    <string name="qq">QQ</string>
    <string name="write_note">填写备注</string>
    <string name="submit_questionnaire_hint">请填写备注(比如调查人群和调查时间),以便管理员进行审核和操作</string>
    <string name="result_see_person">结果仅发起人可见</string>
    <string name="item_name">物品名称</string>
    <string name="upload_image">上传照片</string>
    <string name="please_input_phone_number">请输入手机号码</string>
    <string name="phone_number">手机号码</string>
    <string name="interest_circle">兴趣圈</string>
</resources>