<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_hint_before_30"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_fragment_bottom_sheet_item_height"
        android:gravity="center"
        android:text="@string/dialog_hint_before_30"
        android:textSize="@dimen/font_normal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_view_width"
        android:background="@color/common_divider_color" />


    <TextView
        android:id="@+id/dialog_hint_before_10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_fragment_bottom_sheet_item_height"
        android:gravity="center"
        android:text="@string/dialog_hint_before_10"
        android:textSize="@dimen/font_normal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_view_width"
        android:background="@color/common_divider_color" />


    <TextView
        android:id="@+id/dialog_hint_before_5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_fragment_bottom_sheet_item_height"
        android:gravity="center"
        android:text="@string/dialog_hint_before_5"
        android:textSize="@dimen/font_normal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_view_width"
        android:background="@color/common_divider_color" />


    <TextView
        android:id="@+id/dialog_hint_before_0"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_fragment_bottom_sheet_item_height"
        android:gravity="center"
        android:text="@string/dialog_hint_before_0"
        android:textSize="@dimen/font_normal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_view_width"
        android:background="@color/common_divider_color" />

    <TextView
        android:id="@+id/dialog_hint_before_no"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_fragment_bottom_sheet_item_height"
        android:gravity="center"
        android:text="@string/dialog_hint_no"
        android:textSize="@dimen/font_normal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_view_width"
        android:background="@color/common_divider_color" />

    <TextView
        android:id="@+id/dialog_hint_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_fragment_bottom_sheet_item_height"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_normal" />

</LinearLayout>