<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_margin_left"
            android:layout_marginTop="@dimen/common_margin_left"
            android:text="@string/item_name"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/font_normal" />

        <EditText
            android:id="@+id/fragment_lost_and_found_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_margin_left"
            android:layout_marginRight="@dimen/common_margin_right"
            android:layout_marginTop="@dimen/common_margin_top"
            android:background="@drawable/drawable_feed_back"
            android:hint="@string/lost_and_found_msg"
            android:paddingBottom="@dimen/common_padding_bottom"
            android:paddingLeft="@dimen/common_padding_bottom"
            android:paddingTop="@dimen/common_padding_top"
            android:textColorHint="@color/colorGray"
            android:textSize="@dimen/font_normal" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_margin_left"
            android:layout_marginTop="@dimen/common_margin_left"
            android:text="@string/location"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/font_normal" />


        <EditText
            android:id="@+id/fragment_lost_and_found_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_margin_left"
            android:layout_marginRight="@dimen/common_margin_right"
            android:layout_marginTop="@dimen/common_margin_top"
            android:background="@drawable/drawable_feed_back"
            android:hint="@string/lost_and_found_location"
            android:paddingBottom="@dimen/common_padding_bottom"
            android:paddingLeft="@dimen/common_padding_bottom"
            android:paddingTop="@dimen/common_padding_top"
            android:textColorHint="@color/colorGray"
            android:textSize="@dimen/font_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_margin_left"
            android:layout_marginTop="@dimen/common_margin_left"
            android:text="@string/detail"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/font_normal" />

        <EditText
            android:id="@+id/fragment_lost_and_found_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_margin_left"
            android:layout_marginRight="@dimen/common_margin_right"
            android:layout_marginTop="@dimen/common_margin_top"
            android:background="@drawable/drawable_feed_back"
            android:gravity="top|left"
            android:hint="@string/lost_and_found_detail"
            android:minHeight="@dimen/release_news_detail_min_height"
            android:paddingBottom="@dimen/common_padding_bottom"
            android:paddingLeft="@dimen/common_padding_bottom"
            android:paddingTop="@dimen/common_padding_top"
            android:textColorHint="@color/colorGray"
            android:textSize="@dimen/font_normal" />

        <LinearLayout
            android:id="@+id/fragment_lost_and_found_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_left"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/common_margin_left"
                android:text="@string/phone_number"
                android:textSize="@dimen/font_normal" />

            <EditText
                android:id="@+id/fragment_lost_and_found_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/common_margin_left"
                android:layout_marginRight="@dimen/common_margin_right"
                android:layout_marginTop="@dimen/common_margin_top"
                android:background="@drawable/drawable_feed_back"
                android:hint="@string/please_input_phone_number"
                android:inputType="phone"
                android:padding="@dimen/common_padding_bottom"
                android:textSize="@dimen/font_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/common_margin_left"
                android:layout_marginTop="@dimen/common_padding_top"
                android:text="@string/upload_image"
                android:textSize="@dimen/font_normal" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/fragment_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Button
            android:id="@+id/fragment_lost_and_found_release"
            style="@style/common_style_relative"
            android:layout_marginBottom="@dimen/common_margin_left"
            android:layout_marginLeft="@dimen/common_margin_left"
            android:layout_marginRight="@dimen/common_margin_right"
            android:layout_marginTop="@dimen/common_margin_left"
            android:background="@drawable/common_button"
            android:text="@string/submit"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/font_normal" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
